# netbox-librenms-plugin

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_mapping_refresh.py
.devcontainer/: .env.example  README.md  devcontainer.json  docker-compose.yml  extra-requirements.txt.example
.devcontainer/config/: codespaces-configuration.py  extra-configuration.py.example  plugin-config.py.example
.devcontainer/scripts/: diagnose.sh  load-aliases.sh  process-helpers.sh  setup.sh  start-netbox.sh  welcome.sh
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/instructions/: background-jobs.instructions.md  frontend.instructions.md  release.instructions.md  testing.instructions.md
.github/workflows/: codeql.yml  lint-format.yaml  mkdocs.yaml  publish-pypi.yaml  test.yaml
SUMMARY/: index.html
changelog/: index.html
contrib/: README.md  device_type_mappings.yaml  interface_type_mappings.yaml  inventory_ignore_rules.yaml  module_bay_mappings.yaml  module_type_mappings.yaml  normalization_rules.yaml  platform_mappings.yaml
contributing/: index.html
custom_field/: index.html
development/: index.html
development/mixins/: index.html
development/structure/: index.html
development/templates/: index.html
development/testing/: index.html
development/views/: index.html
docs/: README.md  SUMMARY.md  changelog.md  contributing.md  custom_field.md  feature_list.md  index.md  interface_mappings.md  usage_tips.md  virtual_chassis.md
docs/development/: README.md  mixins.md  structure.md  templates.md  testing.md  views.md
docs/librenms_import/: advanced.md  background_jobs.md  import_process.md  import_settings.md  overview.md  search.md  validation.md
docs/usage_tips/: README.md  custom_field.md  interface_mappings.md  multi_server_configuration.md  permissions.md  suggested_workflow.md  (+1 more)
feature_list/: index.html
interface_mappings/: index.html
media/: configuration.testing.py
netbox_librenms_plugin/: __init__.py  constants.py  filters.py  filtersets.py  forms.py  import_utils.py  import_validation_helpers.py  jobs.py  librenms_api.py  models.py  navigation.py  tables.py  urls.py  utils.py  views.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_background_jobs.py  test_import_validation_helpers.py  test_librenms_api.py  test_netbox_librenms_plugin.py
usage_tips/: index.html
virtual_chassis/: index.html
(+199 files in other folders)
