# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name =  "netbox-librenms-plugin"
version = "0.4.2"
authors = [
    {name = "Andy Norwood"},
]
description = "Netbox plugin to sync data between LibreNMS and Netbox."
readme = "README.md"

classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

requires-python = ">=3.10.0"

# New: Restrict package discovery to our plugin only
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netbox_librenms_plugin*"]
exclude = ["site*", "tests*"]

[tool.setuptools.package-data]
netbox_librenms_plugin = ["templates/**"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "netbox.settings"
pythonpath = ["/opt/netbox/netbox"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "django_db: mark test as requiring database access",
]
addopts = "-v --tb=short --reuse-db"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Follow NetBox conventions - ignore certain rules
ignore = [
    "E501",  # Line too long (strongly encouraged but not enforced)
    "F403",  # Undefined local with import star
    "F405",  # Undefined local with import star usage
]

[tool.ruff.lint.per-file-ignores]
# Allow re-exports in __init__.py files
"__init__.py" = ["F401"]
